add response DTOs to define what data goes back to the frontend from reservation APIs in the backend