@@ -1,156 +1,73 @@
 package com.embula.embula_backend.services.impl;
 
-import com.embula.embula_backend.dto.request.ReservationRequest;
-import com.embula.embula_backend.entity.*;
-import com.embula.embula_backend.exception.ReservationConflictException;
-import com.embula.embula_backend.repository.*;
+import com.embula.embula_backend.dto.request.ReservationRequestDto;
+import com.embula.embula_backend.dto.response.ReservationResponseDto;
+import com.embula.embula_backend.exception.NotFoundException;
+import com.embula.embula_backend.entity.Reservation;
+import com.embula.embula_backend.entity.RestaurantTable;
+import com.embula.embula_backend.entity.enums.ReservationStatus;
+import com.embula.embula_backend.repository.ReservationRepository;
+import com.embula.embula_backend.repository.RestaurantTableRepository;
 import com.embula.embula_backend.services.ReservationService;
-import com.embula.embula_backend.services.TableDto;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public class ReservationServiceIMPL implements ReservationService{
+@RequiredArgsConstructor
+public class ReservationServiceIMPL implements ReservationService {
 
     private final ReservationRepository reservationRepository;
-    private final TableRepository tableRepository;
+    private final RestaurantTableRepository tableRepository;
+    private final ModelMapper modelMapper;
 
-
-
-    public ReservationServiceIMPL(ReservationRepository reservationRepository, TableRepository tableRepository) {
-        this.reservationRepository = reservationRepository;
-        this.tableRepository = tableRepository;
+    @Override
+    public List<RestaurantTable> getAvailableTables(LocalDate date, LocalTime time, int guests) {
+        return tableRepository.findAvailableTables(date, time, guests);
     }
 
-    private LocalDateTime computeEnd(LocalDateTime start, LocalDateTime providedEnd, String mealType) {
-        if (providedEnd != null) return providedEnd;
-        // Basic logic: lunch 90 mins, dinner 120 mins. Adjust as needed.
-        if ("LUNCH".equalsIgnoreCase(mealType)) return start.plusMinutes(90);
-        return start.plusMinutes(120);
-    }
-
+    @Override
     @Transactional
-    public Reservation createReservation(ReservationRequest req) {
-        LocalDateTime start = req.getReservationStart();
-        if (start == null) throw new IllegalArgumentException("reservationStart is required");
-        LocalDateTime end = computeEnd(start, req.getReservationEnd(), req.getMealType());
-        int members = req.getMembers();
+    public ReservationResponseDto createReservation(ReservationRequestDto reservationDto) {
+        List<RestaurantTable> availableTables = getAvailableTables(
+                reservationDto.getDate(), reservationDto.getTime(), reservationDto.getNumberOfGuests());
 
-        // If tableId provided => check that specific table is free
-        if (req.getTableId() != null) {
-            Long tableId = req.getTableId();
-            // lock the table row to avoid concurrent assignment
-            RestaurantTable table = tableRepository.findByIdForUpdate(tableId)
-                    .orElseThrow(() -> new IllegalArgumentException("Table not found"));
-            List<Reservation> conflicts = reservationRepository.findConflictsForTable(tableId, start, end);
-            if (!conflicts.isEmpty()) {
-                throw new ReservationConflictException("Table already booked for that time");
-            }
-            Reservation r = new Reservation();
-            r.setTable(table);
-            r.setReservationStart(start);
-            r.setReservationEnd(end);
-            r.setMembers(members);
-            r.setMealType(req.getMealType());
-            r.setCustomerName(req.getCustomerName());
-            r.setCustomerPhone(req.getCustomerPhone());
-            r.setStatus("CONFIRMED");
-            return reservationRepository.save(r);
-        } else {
-            // find booked table ids for interval, then find tables that fit members and aren't booked
-            List<Long> bookedIds = reservationRepository.findReservedTableIds(start, end);
-            int bookedSize = bookedIds == null ? 0 : bookedIds.size();
-            List<RestaurantTable> available = tableRepository.findAvailableTables(members, bookedIds == null ? List.of() : bookedIds, bookedSize);
-            if (available.isEmpty()) {
-                throw new ReservationConflictException("No table available for requested time");
-            }
-            // Pick best-fit table (smallest capacity that fits)
-            RestaurantTable chosen = available.get(0);
-            // lock the chosen table row before creating reservation to avoid race
-            RestaurantTable locked = tableRepository.findByIdForUpdate(chosen.getId())
-                    .orElseThrow(() -> new IllegalArgumentException("Table not found after selection"));
-            // check again for conflicts for locked table
-            List<Reservation> conflicts = reservationRepository.findConflictsForTable(locked.getId(), start, end);
-            if (!conflicts.isEmpty()) {
-                // someone else took it in the meantime
-                throw new ReservationConflictException("Table became unavailable; try again");
-            }
-            Reservation r = new Reservation();
-            r.setTable(locked);
-            r.setReservationStart(start);
-            r.setReservationEnd(end);
-            r.setMembers(members);
-            r.setMealType(req.getMealType());
-            r.setCustomerName(req.getCustomerName());
-            r.setCustomerPhone(req.getCustomerPhone());
-            r.setStatus("CONFIRMED");
-            return reservationRepository.save(r);
+        if (availableTables.isEmpty()) {
+            throw new NotFoundException("No available tables for the selected date, time, and number of guests.");
         }
+
+        RestaurantTable assignedTable = availableTables.get(0); // Simple strategy: assign the first available table
+
+        Reservation reservation = modelMapper.map(reservationDto, Reservation.class);
+        reservation.setTable(assignedTable);
+        reservation.setStatus(ReservationStatus.BOOKED);
+
+        Reservation savedReservation = reservationRepository.save(reservation);
+
+        return modelMapper.map(savedReservation, ReservationResponseDto.class);
     }
 
-    public List<com.embula.embula_backend.services.TableDto> findAvailableTables(LocalDateTime start, int members) {
-        LocalDateTime end = computeEnd(start, null, "DINNER");
-        List<Long> booked = reservationRepository.findReservedTableIds(start, end);
-        int bookedSize = booked == null ? 0 : booked.size();
-        List<RestaurantTable> tables = tableRepository.findAvailableTables(members, booked == null ? List.of() : booked, bookedSize);
-        return tables.stream().map(t -> {
-            com.embula.embula_backend.services.TableDto dto = new com.embula.embula_backend.services.TableDto();
-            dto.setId(t.getId());
-            dto.setName(t.getName());
-            dto.setCapacity(t.getCapacity());
-            return dto;
-        }).toList();
+    @Override
+    public List<ReservationResponseDto> findReservationsByCustomer(String email) {
+        return reservationRepository.findByCustomerEmail(email).stream()
+                .map(reservation -> modelMapper.map(reservation, ReservationResponseDto.class))
+                .collect(Collectors.toList());
     }
 
+    @Override
     @Transactional
-    public void cancelReservation(Long id) {
-        Reservation reservation = reservationRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Reservation not found"));
-        if ("CANCELLED".equalsIgnoreCase(reservation.getStatus())) {
-            throw new IllegalArgumentException("Reservation is already cancelled");
-        }
-        reservation.setStatus("CANCELLED");
+    public void cancelReservation(Long reservationId) {
+        Reservation reservation = reservationRepository.findById(reservationId)
+                .orElseThrow(() -> new NotFoundException("Reservation not found with id: " + reservationId));
+
+        reservation.setStatus(ReservationStatus.CANCELLED);
         reservationRepository.save(reservation);
     }
-
-    //update reservation
-    @Transactional
-    public void updateReservation(Long id, ReservationRequest req) {
-        Reservation existing = reservationRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Reservation not found"));
-        if ("CANCELLED".equalsIgnoreCase(existing.getStatus())) {
-            throw new IllegalArgumentException("Cannot update a cancelled reservation");
-        }
-        LocalDateTime start = req.getReservationStart() != null ? req.getReservationStart() : existing.getReservationStart();
-        LocalDateTime end = computeEnd(start, req.getReservationEnd(), req.getMealType() != null ? req.getMealType() : existing.getMealType());
-        int members = req.getMembers() != 0 ? req.getMembers() : existing.getMembers();
-
-        // If tableId provided => check that specific table is free
-        if (req.getTableId() != null) {
-            Long tableId = req.getTableId();
-            // lock the table row to avoid concurrent assignment
-            RestaurantTable table = tableRepository.findByIdForUpdate(tableId)
-                    .orElseThrow(() -> new IllegalArgumentException("Table not found"));
-            List<Reservation> conflicts = reservationRepository.findConflictsForTableExcludingReservation(tableId, start, end, id);
-            if (!conflicts.isEmpty()) {
-                throw new ReservationConflictException("Table already booked for that time");
-            }
-            existing.setTable(table);
-        } else {
-            // find booked table ids for interval, then find tables that fit members and aren't booked
-            List<Long> bookedIds = reservationRepository.findReservedTableIdsExcludingReservation(start, end, id);
-            int bookedSize = bookedIds == null ? 0 : bookedIds.size();
-            List<RestaurantTable> available = tableRepository.findAvailableTables(members, bookedIds == null ? List.of() : bookedIds, bookedSize);
-            if (available.isEmpty()) {
-                throw new ReservationConflictException("No table available for requested time");
-            }
-            // Pick best-fit table (smallest capacity that fits)
-            RestaurantTable chosen = available.get(0);
-            // lock the chosen table row before creating reservation to avoid
-
-        }}
 }
 
